Utworzono za pomocą Colaboratory

--- a/01_wprowadzenie/03_funkcje_statystyczne.ipynb
+++ b/01_wprowadzenie/03_funkcje_statystyczne.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9OE1BhuBznxnqbKxyiRdC",
+      "authorship_tag": "ABX9TyNpjiOWw4+YFZ8+K8VfxhlH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "hpjSdwlLJ59P",
-        "outputId": "08e18a3c-64c4-46e8-cd10-2a44ca03bd65"
+        "outputId": "30b46211-1d57-4dc4-ba62-bac1cba71da5"
       },
       "outputs": [
         {
@@ -49,7 +49,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -59,12 +59,334 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# notowania spółki z 3 dni\n",
+        "#       cena:      open   hi     low    close  volumen\n",
+        "price = np.array([[12.40, 12.80, 11.90, 12.60, 1000],\n",
+        "                  [12.50, 13.00, 11.70, 12.20, 2000],\n",
+        "                  [12.20, 13.40, 12.20, 13.20, 1500]])\n",
+        "print(price)"
+      ],
       "metadata": {
-        "id": "EpxEc3E5KEKW"
+        "id": "EpxEc3E5KEKW",
+        "outputId": "fafe0cc3-fc72-4db0-d4dd-05027c4c4b42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[  12.4   12.8   11.9   12.6 1000. ]\n",
+            " [  12.5   13.    11.7   12.2 2000. ]\n",
+            " [  12.2   13.4   12.2   13.2 1500. ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "sum()"
+      ],
+      "metadata": {
+        "id": "KUxe17cskR7E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# suma wszystkich elementów\n",
+        "price.sum()"
+      ],
+      "metadata": {
+        "id": "23U5if4JkRBB",
+        "outputId": "0402f502-a483-4d71-e1a1-23ef1fd5e1d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4650.1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# suma poszczególnych kolumn  (axis=0 - kolumny, axis=1 wiersze)\n",
+        "price.sum(axis=0)"
+      ],
+      "metadata": {
+        "id": "4BC-SA0kkcjH",
+        "outputId": "87cc2f02-5ab3-434e-9842-b99865fb7ef5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  37.1,   39.2,   35.8,   38. , 4500. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sum(price, axis=0)"
+      ],
+      "metadata": {
+        "id": "XihEskeikr9a",
+        "outputId": "959273bc-e687-4896-cc0f-93397049c364",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  37.1,   39.2,   35.8,   38. , 4500. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "min()"
+      ],
+      "metadata": {
+        "id": "HbGomDqkkTfD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.min(price, axis=0)"
+      ],
+      "metadata": {
+        "id": "03sySjA-ky7W",
+        "outputId": "69344821-8ff9-403a-b374-69cecdbb51e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  12.2,   12.8,   11.7,   12.2, 1000. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "max()"
+      ],
+      "metadata": {
+        "id": "-HI-Nh-8k6MN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.max(price, axis=0)"
+      ],
+      "metadata": {
+        "id": "Kz7sPfTUk7sX",
+        "outputId": "6ebaff31-b30e-4b08-b7f6-acd7df5cff3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  12.5,   13.4,   12.2,   13.2, 2000. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "median()"
+      ],
+      "metadata": {
+        "id": "9o4_8uGvk-Mp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.median(price)"
+      ],
+      "metadata": {
+        "id": "Ei5pVBzilAmf",
+        "outputId": "7b2d0d9d-0d66-455f-9477-7d2423e7ec9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12.6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "mean() - średnia"
+      ],
+      "metadata": {
+        "id": "gixKZ9WZlHG0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.mean(price, axis=0)"
+      ],
+      "metadata": {
+        "id": "8PSwKeQklJDQ",
+        "outputId": "72e2d60f-e703-4c89-9a8b-38f2bf189986",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  12.36666667,   13.06666667,   11.93333333,   12.66666667,\n",
+              "       1500.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "std() - odchylenie standardowe"
+      ],
+      "metadata": {
+        "id": "fEVGop-9lM4y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.set_printoptions(precision=4, suppress=True)\n",
+        "np.std(price, axis=0)"
+      ],
+      "metadata": {
+        "id": "1M4Wmpk6lOR0",
+        "outputId": "9f4a8034-bbf3-4e53-c7be-95142d68145a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  0.1247,   0.2494,   0.2055,   0.411 , 408.2483])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "var() wariacja"
+      ],
+      "metadata": {
+        "id": "3YOPX-TzlVST"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.var(price, axis=0)"
+      ],
+      "metadata": {
+        "id": "w3lIz_AFlX_I",
+        "outputId": "39dd2071-63ef-4c3b-eefa-80e7772ed8f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([     0.0156,      0.0622,      0.0422,      0.1689, 166666.6667])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     }
   ]
 }
